package coffee_maker;

public class Cappuccino implements CoffeeType {

    @Override
    public String coffee() {
        return "Cappuccino";
    }

}
