package coffee_maker;

public class Latte implements CoffeeType {

    @Override
    public String coffee() {
        return "Latte";
    }

}
