@startuml
class coffee_maker.Main {
~ {static} Validation validation
~ {static} int userChoice
+ {static} void main(String[])
~ {static} void promptForUserChoice()
~ {static} int getUserChoice()
}
interface coffee_maker.CoffeeType {
~ String coffee()
}
class coffee_maker.Espresso {
+ String coffee()
}
class coffee_maker.CoffeeMachine {
- CoffeeType coffeeType
+ void setCoffeeType(CoffeeType)
+ String makeCoffee()
}
class coffee_maker.Latte {
+ String coffee()
}
class coffee_maker.Cappuccino {
+ String coffee()
}
class coffee_maker.Validation {
~ {static} CoffeeMachine coffeeMachine
~ {static} void getResult(int)
~ {static} void getOutput()
}


coffee_maker.CoffeeType <|.. coffee_maker.Espresso
coffee_maker.CoffeeType <|.. coffee_maker.Latte
coffee_maker.CoffeeType <|.. coffee_maker.Cappuccino
@enduml